--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@shopify/app-bridge": "^3.7.10",
+    "@shopify/app-bridge-utils": "^3.5.1",
+    "axios": "^1.12.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-i18n": "9",
