--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@shopify/app-bridge": "^3.7.10",
     "@shopify/app-bridge-utils": "^3.5.1",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.2",
     "vue-i18n": "9",
     "vue-router": "4",
     "vuetify": "^3"
